fix: rename to @meshguard/meshguard to fix plugin ID mismatch
- Package now installs to /extensions/meshguard/ matching plugin ID
- Bumped to v0.2.0
- Updated README and CHANGELOG

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@meshguard/openclaw",
-  "version": "0.1.3",
+  "name": "@meshguard/meshguard",
+  "version": "0.2.0",
   "description": "Official MeshGuard extension for OpenClaw - AI agent governance, policy enforcement, and audit logging",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
